# ZoomInfoEmailFinder

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  crawler.rs  email_extractor.rs  google_sheets.rs  http_client.rs  main.rs
tests/: email_tests.rs
