[package]
name = "zoominfo-email-finder"
version = "0.1.0"
edition = "2021"
authors = ["Alderac"]
license = "MIT"

[features]
# Optional headless browser support; disabled by default but can be enabled with `--features headless`
headless = ["headless_chrome"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
# Use a multi-threaded async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "fs", "time"] }
# Futures utilities
futures = "0.3"
# HTTP client with Rustls TLS and compression
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "json", "http2"] }
# HTML parsing and utilities
scraper = "0.19"
regex = "1.10"
url = "2.5"
publicsuffix = { version = "1.5" }
# Email normalization/validation
email_address = "0.2"
# CSV output and serialization
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Caching and paths
sha2 = "0.10"
hex = "0.4"
directories = "5.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Progress indicators
indicatif = "0.17"
# Interactive prompts
dialoguer = "0.11"
# Optional headless browser (requires Chrome installed)
headless_chrome = { version = "0.9", optional = true }
